# base_graph

./: CMakeLists.txt  config.cfg  main.cpp  test.cpp
configs/: brunson_south-africa_south-africa.cfg  livejournal-groupmemberships.cfg
include/: BaseGraph.h  RandomRange.h  TlsGraph.h
src/: BaseGraph.cpp  RandomRange.cpp  TlsGraph.cpp
